# ansible-bao

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  galaxy.yml  pyproject.toml  release-please-config.json
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml  release-please.yml
docs/adr/: ADR-001-hvac-over-cli.md
meta/: execution-environment.yml
plugins/module_utils/: _client.py
plugins/modules/: audit_device.py  auth_method.py  auth_method_info.py  auth_role.py  auth_role_info.py  bao_status.py  identity_entity.py  identity_entity_info.py  identity_group.py  identity_group_info.py  kv2_secret.py  kv2_secret_info.py  namespace.py  namespace_info.py  policy.py  policy_info.py  secrets_engine.py  secrets_engine_info.py
tests/sanity/: requirements.txt
